--- a/valentine.html
+++ b/valentine.html
@@ -61,20 +61,16 @@
   c-5,8-5.667,45.333,19.333,57C213.574,106.979,295.928,102.42,319,88" />
     </svg>
     <h1>Indi <3 </h1>
-        <p>En un dia tan especial, como este me gustaria decirte algunas cosas</p>
-        <p>Apesar de que tenemos poco tiempo conociendonos la verdad me siento muy agusto contigo la parte mas bonita de
-          mi dia es el poder hablar contigo.</p>
-        <p>Y no sabes como me emociono cada vez que suena mi telefono y lo reviso y es un mensaje tuyo y es inevitable
-          que una sonrisa se dinuje en mi rostro.</p>
-        <p>En ocaciones me pierdo mirando tus fotos y me quedo asombrado por todo lo que eres y simplemente puedo decir
-          Wow es perfecta.<3 </p>
-            <p>Tal vez te han dado cartas en ocaiones anteriores pero esta es diferente sabes podras llevarla contigo a
-              donde quieras y estara aqui para ti siempre asi como yo estare para ti cada que me necesites.</p>
-            <p>Espero tener la oportunidad de conocerte mas y no lo se el tiempo nos mostrara las cosas.</p>
+        <p>En un día tan especial como este, me gustaría decirte algunas cosas.</p>
+        <p>A pesar de que tenemos poco tiempo conociéndonos, la verdad es que me siento muy a gusto contigo. La parte más bonita de mi día es poder hablar contigo.</p>
+        <p>Y no sabes cómo me emociono cada vez que suena mi teléfono, lo reviso y es un mensaje tuyo. Es inevitable que una sonrisa se dibuje en mi rostro.</p>
+        <p>En ocasiones me pierdo mirando tus fotos y me quedo asombrado por todo lo que eres. Simplemente puedo decir: 'Wow, eres perfecta'.<3 </p>
+            <p>Tal vez te hayan dado cartas en ocasiones anteriores, pero esta es diferente. Sabes, podrás llevarla contigo a donde quieras y estará aquí para ti siempre, así como yo estaré para ti cada vez que me necesites.</p>
+            <p>Espero tener la oportunidad de conocerte más. No lo sé, el tiempo nos mostrará las cosas.</p>
             <h3>TQM...</h3>
   </div>
   <div class="mesage">
-    <a href="./happyvalentine/floresamarillas/indexflores.html"><p>Estas flores son para ti da click aqui</p></a>
+    <a href="./happyvalentine/floresamarillas/indexflores.html"><p>Estas flores son para ti. Haz clic aquí.</p></a>
   </div>
   <br>
   <div class="container">
